[project]
name = "async-sx127x"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioserial>=1.3.1",
    "event",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
]

[tool.uv.sources]
event = { git = "https://github.com/CrinitusFeles/Event.git" }
